Changed music section layout

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
               <div class="h-100">
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <div class="music-name">Song 1</div>
+                  <div class="music-name">
+                    Music Name
+                  </div>
                   <div class="duration">03:54</div>
                 </div>
               </div>
@@ -74,7 +76,7 @@
               <div class="h-100">
                 <img src="/covers/2.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <div class="music-name">Song 2</div>
+                  <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
               </div>
@@ -83,8 +85,8 @@
               <div class="h-100">
                 <img src="/covers/3.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 3</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -92,8 +94,8 @@
               <div class="h-100">
                 <img src="/covers/4.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 4</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -101,8 +103,8 @@
               <div class="h-100">
                 <img src="/covers/5.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 5</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -110,8 +112,8 @@
               <div class="h-100">
                 <img src="/covers/6.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 6</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -119,8 +121,8 @@
               <div class="h-100">
                 <img src="/covers/7.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 7</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -128,8 +130,8 @@
               <div class="h-100">
                 <img src="/covers/8.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 8</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -137,8 +139,8 @@
               <div class="h-100">
                 <img src="/covers/9.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 9</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
@@ -146,8 +148,8 @@
               <div class="h-100">
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
-                  <h6 class="music-name">Song 10</h6>
-                  <p class="duration">03:54</p>
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
                 </div>
               </div>
             </div>
