--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
         </div>
         <div class="playlist">
           <div class="subheader">
-            <!-- <div class="btnsub btnhead"> -->
             <i class="fa-solid fa-book-open iconspacing"></i>Playlists
             <div class="create">
               <i class="fa-solid fa-plus iconspacing iconright"></i>
             </div>
-            <!-- </div> -->
           </div>
           <div class="subheader liked">Liked Songs</div>
           <div class="subheader liked"><span class="playlist-name"></span></div>
@@ -63,6 +61,9 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -72,6 +73,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/2.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -81,6 +85,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/3.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -90,6 +97,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/4.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -99,6 +109,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/5.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -108,6 +121,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/6.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -117,6 +133,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/7.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -126,6 +145,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/8.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -135,6 +157,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/9.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -144,6 +169,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
+                <div class="play-icon">
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                </div>
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
