--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -73,9 +73,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/2.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -85,9 +85,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/3.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -97,9 +97,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/4.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -109,9 +109,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/5.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -121,9 +121,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/6.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -133,9 +133,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/7.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -145,9 +145,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/8.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -157,9 +157,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/9.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
@@ -169,9 +169,9 @@
             </div>
             <div class="col-md-3 col-sm-12 cards">
               <div class="h-100">
-                <div class="play-icon">
+                <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
-                </div>
+                <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
