Aligned side sections, added more songs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="name">THE MUSIC PLAYER</div>
         <div class="songs-section">
           <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -71,7 +71,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -83,7 +83,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -95,7 +95,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -107,7 +107,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -119,7 +119,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -131,7 +131,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -143,7 +143,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -155,7 +155,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
@@ -167,7 +167,139 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-12 cards">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
+              <div class="h-100">
+                <!-- <div class="play-icon"> -->
+                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                <!-- </div> -->
+                <img src="/covers/10.jpg" class="card-img-top" alt="..." />
+                <div class="song-info">
+                  <div class="music-name">Music Name</div>
+                  <div class="duration">03:54</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
