--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -74,7 +74,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/2.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -86,7 +86,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/3.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -98,7 +98,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/4.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -110,7 +110,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/5.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -122,7 +122,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/6.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -134,7 +134,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/7.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -146,7 +146,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/8.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -158,7 +158,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/9.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -170,7 +170,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -182,7 +182,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -194,7 +194,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -206,7 +206,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -218,7 +218,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -230,7 +230,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -242,7 +242,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -254,7 +254,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -266,7 +266,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -278,7 +278,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -290,7 +290,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -302,7 +302,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle" id="masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
