--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="playing-song-display">
           <img src="/covers/8.jpg" class="card-img-top" alt="..." />
           <div class="songdetails">
-            <div class="covermusicname">Music Name</div>
+            <div class="covermusicname"><span id="coversongname">Music Name</span></div>
             <div class="covericon">
               <i class="fa-solid fa-plus"></i>
               <i class="fas fa-solid fa-heart"></i>
@@ -330,9 +330,9 @@
     </div>
     <div class="footer">
       <div class="footersong">
-        <img src="/covers/8.jpg" class="footercoverimg" alt="..." />
+        <img src="/covers/8.jpg" id="footercoverimg" alt="..." />
         <div class="footersongname">
-          <span id="masterSongName"></span>
+          <span id="masterSongName">Music Name</span>
         </div>
         <i class="fas fa-solid fa-heart footcovericon"></i>
       </div>
