--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <div class="now-playing">
         <div class="now-playing-info">Now Playing...</div>
         <div class="playing-song-display">
-          <img src="/covers/8.jpg" class="card-img-top" alt="..." />
+          <img src="/covers/8.jpg" id="playing-cover-img" class="card-img-top" alt="..." />
           <div class="songdetails">
             <div class="covermusicname"><span id="coversongname">Music Name</span></div>
             <div class="covericon">
