--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
                   <div class="music-name">Music Name</div>
-                  <div class="duration">03:54</div>
+                  <div class="duration"></div>
                 </div>
               </div>
             </div>
